syntax = "proto3";

option csharp_namespace = "CDN.Grpc.Protos";

service ImageProtoService {
	rpc GetImage (GetImageRequest) returns (GetImageResponse);
	rpc GetImages (GetImagesRequest) returns (GetImagesResponse);
	rpc InsertImage (InsertImageRequest) returns (InsertImageResponse);
}


message Image {
	string id = 1;
	string blobId = 2;
	string blob = 3;
}

message ImageCreationInfo {
	string blobId = 1;
	string blob = 2;
}

message GetImageRequest {
	string blobId = 1;
}

message GetImageResponse {
	Image image = 1;
}

message GetImagesRequest {
}

message GetImagesResponse {
	repeated Image images = 1;
}

message InsertImageRequest {
	ImageCreationInfo imageCreationInfo = 1;
}

message InsertImageResponse {
	Image image = 1;
}